# deepseek-anthropic-gateway

./: .gitignore  README.md  SPEC.md  config.json  proxy_server.py  run-logging.bat  run.bat
gui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
gui/src/: App.css  App.tsx  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: ApiKeyPanel.tsx  ClaudeConfigPanel.tsx  ConfigPanel.tsx  Header.tsx  LogPanel.tsx  StatusPanel.tsx  TabBar.tsx
gui/src/hooks/: useConfig.ts  useHealthCheck.ts  useLog.ts  useProxyToggle.ts  useRawConfig.ts
gui/src/i18n/: LanguageContext.tsx  index.ts  translations.ts  useTranslation.ts
scripts/: phase0_probe.py  proxy_e2e_test.py
