[package]
name = "anthropic-provider-gateway-gui"
version = "0.2.0"
edition = "2021"

[lib]
name = "anthropic_provider_gateway_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4"
encoding_rs = "0.8"
